tests/ui/static/static-closures.stderr
error[E0658]: coroutine syntax is experimental
  --> $DIR/static-closures.rs:2:5
   |
LL |     static || {};
   |     ^^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0697]: closures cannot be static
  --> $DIR/static-closures.rs:2:5
   |
LL |     static || {};
   |     ^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0658, E0697.
For more information about an error, try `rustc --explain E0658`.
