tests/ui/static/static-closures.rs
fn main() {
    static || {};
    //~^ ERROR closures cannot be static
    //~| ERROR coroutine syntax is experimental
}
